Fix: Reword the notebook intro

--- a/example_notebooks/large_language_model_inference.ipynb
+++ b/example_notebooks/large_language_model_inference.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Large Language Model Inference\n",
     "\n",
-    "This notebook illustrates how to perform inference using `odewei`. It illustrates the power of `odewei` that allows one to run models on hardware with any model size.\n",
+    "This notebook illustrates how to perform inference using `odewei`. It showcases the power of `odewei` that enables one to run models on hardware with limited memory capacity.\n",
     "\n",
-    "We use the Flan-T5-XXL model for this example. In particular we use the sharded version by Phil Schmid so we don't require a device with 80GB of memory for model preparation 🥶"
+    "We demonstrate the usage of `odewei` with the Flan-T5-XXL model. Specifically, we utilize the sharded version created by Phil Schmid to avoid the requirement of a device with 80GB of memory for model preparation 🥶."
    ]
   },
   {
