Fix: Reword the notebook

--- a/example_notebooks/large_language_model_inference.ipynb
+++ b/example_notebooks/large_language_model_inference.ipynb
@@ -105,20 +105,16 @@
     "1. `model_fn`: A function that returns an instance of our model. This function does not need to load weights, as the weights are initialized as empty. This means that our model will not consume any device memory, allowing us to initialize a model with billions of parameters even on an everyday laptop.\n",
     "\n",
     "    ```python\n",
-    "    def model_fn():\n",
-    "        return MyModel(model_config)\n",
+    "    def model_fn() -> torch.nn.Module:\n",
+    "        ...\n",
     "    ```\n",
     "\n",
     "2. `weights_loader_fn`: A function that takes the module name and a list of weight names as inputs, and returns a mapping from weight name to weight.\n",
     "\n",
     "    ```python\n",
-    "    def weights_loader_fn(module_name, weight_names):\n",
-    "        weights = {}\n",
-    "        for name in weight_names:\n",
-    "            # Load the weight from disk\n",
-    "            weight = load_weight_from_disk(name)\n",
-    "            weights[name] = weight\n",
-    "        return weights\n",
+    "    def weights_loader_fn(module_name: str, weight_names: list[str]\n",
+    "    ) -> dict[str, torch.Tensor]:\n",
+    "        ...\n",
     "    ```"
    ]
   },
