--- a/example_notebooks/end_to_end_model_preparation_and_inference.ipynb
+++ b/example_notebooks/end_to_end_model_preparation_and_inference.ipynb
@@ -5,7 +5,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# End to End Model Preparation and Inference 🚀\n",
+        "# 🚀 End to End Model Preparation and Inference 🌔\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/Kinyugo/odewel/blob/main/example_notebooks/end_to_end_model_preparation_and_inference.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>\n",
         "\n",
         "This notebook demonstrates how to get your model ready for inference with `odewel` and perform efficient inference by loading weights only when they are needed. 🔥\n"
       ]
