--- a/example_notebooks/large_language_model_inference.ipynb
+++ b/example_notebooks/large_language_model_inference.ipynb
@@ -5,11 +5,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 🏋️ Large Language Model Inference 💪\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Kinyugo/odewel/blob/main/example_notebooks/large_language_model_inference.ipynb)\n",
         "\n",
-        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/Kinyugo/odewel/blob/main/example_notebooks/large_language_model_inference.ipynb\">\n",
-        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-        "</a>\n",
+        "# 🏋️ Large Language Model Inference 💪\n",
         "\n",
         "This notebook illustrates how to perform inference using `odewel`. It showcases the power of `odewel` that enables one to run models on hardware with limited memory capacity.\n",
         "\n",
