Fix: Requirements in notebook

--- a/example_notebooks/end_to_end_model_preparation_and_inference.ipynb
+++ b/example_notebooks/end_to_end_model_preparation_and_inference.ipynb
@@ -44,6 +44,7 @@
       "outputs": [],
       "source": [
         "%pip install -q git+https://github.com/Kinyugo/odewel.git\n",
+        "%pip install transformers accelerate\n",
         "%pip install -q joblib"
       ]
     },
