--- a/example_notebooks/large_language_model_inference.ipynb
+++ b/example_notebooks/large_language_model_inference.ipynb
@@ -46,7 +46,7 @@
       "outputs": [],
       "source": [
         "%pip install -q git+https://github.com/Kinyugo/odewel.git\n",
-        "%pip install transformers accelerate\n",
+        "%pip install -q transformers accelerate\n",
         "%pip install -q joblib"
       ]
     },
